--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_starter",
+  "name": "react-boiler",
   "version": "1.0.0",
   "description": "Starting setup for react redux project",
   "main": "index.js",
@@ -8,16 +8,16 @@
     "bundle": "webpack --config webpack.prod.js --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Scott Bowler",
+  "author": "Jonathan Tirtilli",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Learning-Fuze/react_starter.git"
+    "url": "https://github.com/jontiritilli/react-boiler.git"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2"
   },
@@ -28,17 +28,17 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.2.0",
-    "postcss-loader": "^2.1.1",
-    "react-hot-loader": "^4.0.0",
+    "postcss-loader": "^2.1.3",
+    "react-hot-loader": "^4.0.1",
     "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.3",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.2",
     "webpack-merge": "^4.1.2"
   }
 }
