--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.3.1",
     "redux": "^3.7.2"
   },
   "devDependencies": {
